Updated dev container file.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -19,4 +19,8 @@ RUN apt-get update && apt-get install ffmpeg libsm6 libxext6  -y
 RUN pip install torch torchvision torchaudio
 ADD setup.py .
 RUN pip install .
-RUN pip install opencv-python
+RUN pip uninstall opencv-python
+RUN pip install opencv-python-headless
+# install lunarlander dependencies
+RUN pip install swig
+RUN pip install gymnasium[box2d]
