--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,10 +1,4 @@
-FROM mcr.microsoft.com/devcontainers/anaconda:1-3
-
-# Copy environment.yml (if found) to a temp location so we update the environment. Also
-# copy "noop.txt" so the COPY instruction does not fail if no environment.yml exists.
-COPY environment.yml* .devcontainer/noop.txt /tmp/conda-tmp/
-RUN if [ -f "/tmp/conda-tmp/environment.yml" ]; then umask 0002 && /opt/conda/bin/conda env update -n base -f /tmp/conda-tmp/environment.yml; fi \
-    && rm -rf /tmp/conda-tmp
+FROM mcr.microsoft.com/devcontainers/python:1-3.12-bullseye
 
 # [Optional] Uncomment this section to install additional OS packages.
 # RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
@@ -14,14 +8,17 @@ RUN if [ -f "/tmp/conda-tmp/environment.yml" ]; then umask 0002 && /opt/conda/bi
 COPY . .
 
 # resolve libGL.so.1 issue
-RUN apt-get update && apt-get install ffmpeg libsm6 libxext6  -y
+RUN apt-get update && apt-get install ffmpeg libsm6 libxext6 swig xvfb -y
+
+RUN pip install --upgrade pip
 
 RUN pip install torch torchvision torchaudio
 ADD setup.py .
-RUN pip install .
+RUN pip install . tqdm rich debugpy
 RUN pip install opencv-python
 # RUN pip uninstall opencv-python
 # RUN pip install opencv-python-headless
 # install lunarlander dependencies
 RUN pip install swig
 RUN pip install gymnasium[box2d]
+RUN pip install gymnasium[mujoco]
